# machine-learning

./: .gitignore  .spyderworkspace  DecisionTree.py  LinearProgramming.py  k-近邻算法.md  kNN.py  least-square-method.py  test-matplotlib.py  回归问题.md  评估方法&性能度量.md
Machine-Learning-Logistic-Regression--master/: LRClassifier150.json  horseColicTraining.txt  lr.py  object_json.py  test.py
stero_vision/: 双目视觉.pptx  双目视觉_1.md  双目视觉_3.md  流程图.vsdx
stero_vision/algorithms_params/: stereobm_params.xml  stereobm_res.xml  stereogc_params.xml  stereogc_res.xml  stereosgbm_params.xml  stereosgbm_res.xml
stero_vision/data/: datasets.xml
stero_vision/notes/: CUDA_1.md  双目视觉_1.md  双目视觉_3.md  双目视觉_4.md  双目视觉_5.md  双目视觉_6.md
stero_vision/opencv/CUDA_BM/: CMakeLists.txt  backup.cu  census.cu  cpp_speed_test.cpp  diff.cu  diff.cu.bak2  example.cpp  internal.hpp  start.sh
stero_vision/opencv/TestOpenCV/: TestOpenCV3.0.sln
stero_vision/opencv/TestOpenCV/TestOpenCV3.0/: TestOpenCV3.0.cpp  TestOpenCV3.0.vcxproj  TestOpenCV3.0.vcxproj.filters  calibration.cpp  stereo_calib.cpp
stero_vision/script/: common.py  sgbm_simple.cpp  stereo_test_3.py  stereo_test_4.py  stereo_test_5.py  stereo_test_6.py  stereo_test_7.py  stereo_test_8.py  stereo_test_bm.py  stereo_test_bt_bm.py  stereo_test_bt_dp.py  stereo_test_bt_dp2.py  stereo_test_census_bm.py  stereo_test_dp.py  stereo_test_lowtexture_bm.py  stereo_test_sgm.py  stereosgbm.cpp
stero_vision/script/cpp_speed_up/: cpp_speed_up.sln
stero_vision/script/cpp_speed_up/Release/: cpp_speed_up.exp  cpp_speed_up.iobj  cpp_speed_up.ipdb  (+1 more)
(+46 files in other folders)
